--- a/01_get_census_api_data.Rmd
+++ b/01_get_census_api_data.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Census API Data"
-author: "Veronica Ikeshoji-Orlati"
+author: "Diversiteam (VAI)"
 date: "11/24/2020"
 output: html_document
 ---
@@ -12,13 +12,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ##### First, take a look at all of the available US Census APIs
 ``` {r}
-# Load the censusapi library
+# Load libraries
 library(censusapi)
-
-# Load other data-cleaning libraries
 library(tidyr)
 library(stringr)
 library(dplyr)
+library(tidyverse)
+
+# Force read the R environment file
+readRenviron("~/.Renviron")
 
 # Create a new dataframe with the full list of available census APIs
 apis <- listCensusApis()
@@ -99,8 +101,10 @@ label_02s <- c('DISABILITY STATUS OF THE CIVILIAN NONINSTITUTIONALIZED POPULATIO
 target_acs_vars <- acs_vars %>% 
         filter(label_02 %in% label_02s) %>% 
         filter(label_01 == "Estimate") %>% 
+        filter(concept != "SELECTED SOCIAL CHARACTERISTICS IN PUERTO RICO") %>% 
         select(-one_of(c("label", "label_07", "label_08", "predicateType", "group", "limit", "attributes", "required")))
 
+View(target_acs_vars)
 # Did it work?
 # View(target_acs_vars)
 ```
