added percent col

--- a/02_data_cleanup.rmd
+++ b/02_data_cleanup.rmd
@@ -32,25 +32,54 @@ acs_data %>%
         select(label_02,label_04,label_05,race_ethnicity,value)
 ```
 
+```{r}
+plus18 <- acs_data$value[acs_data$name=="DP05_0021E"]
+plus64 <- acs_data$value[acs_data$name=="DP05_0029E"]
+a60t64 <- acs_data$value[acs_data$name=="DP05_0014E"]
+a55t59 <- acs_data$value[acs_data$name=="DP05_0013E"]
+a45t54 <- acs_data$value[acs_data$name=="DP05_0012E"]
+a35t44 <- acs_data$value[acs_data$name=="DP05_0011E"]
+a25t34 <- acs_data$value[acs_data$name=="DP05_0010E"]
+total <-  plus18 - plus64 - a60t64 - a55t59 - a45t54 - a35t44 - a25t34
+
+```
+
+
 
 ```{r}
 `%nin%` = Negate(`%in%`)
 
 acs_data_convert <- acs_data %>%
     filter(label_02 %in% c('HISPANIC OR LATINO AND RACE','EDUCATIONAL ATTAINMENT','SEX AND AGE')) %>%
+    filter(label_04 %nin% c('10 to 14 years','15 to 19 years','5 to 9 years')) %>%
+    filter(name != 'DP05_0024E') %>%
     mutate(dropDownMain = case_when(label_02 == 'HISPANIC OR LATINO AND RACE' ~ 'Race',
                                     label_02 == 'EDUCATIONAL ATTAINMENT'~'Education',
-                                    label_02 == 'SEX AND AGE' & label_04 %in% c('Female','Male') ~ 'Sex',
+                                    label_02 == 'SEX AND AGE' & (label_04 %in% c('Female','Male') |  
+                                                                 label_05 %in% c('Female','Male')) ~ 'Sex',
                                     TRUE ~ 'Age')) %>%
-    mutate(dropDownSub = case_when(label_02 == 'SEX AND AGE' & label_04 %nin% c('Female','Male') ~ label_04,
-                                   label_02 == 'SEX AND AGE' & label_04 %in% c('Female','Male') ~ label_04)) %>%
-    mutate(xValue = case_when(label_02 != 'SEX AND AGE' ~ label_04)) %>%
+    mutate(dropDownSub = case_when(label_02 == 'SEX AND AGE' & label_04 %in% c('Female','Male') ~ label_04,
+                                   label_02 == 'SEX AND AGE' & label_04 %nin% c('Female','Male')
+                                                & label_05 %in% c('Female','Male') ~ label_04
+                                   )) %>%
+    mutate(xValue = case_when(label_02 == 'HISPANIC OR LATINO AND RACE' & label_04 == 'Hispanic or Latino (of any race)' ~ label_04,
+                              label_02 == 'HISPANIC OR LATINO AND RACE' & label_04 == 'Not Hispanic or Latino' ~ label_05,
+                              label_02 == 'SEX AND AGE' & label_04 %nin% c('Female','Male')
+                                            & label_05 %nin% c('Female','Male')~ label_04,
+                              label_02 != 'SEX AND AGE' & label_02 != 'HISPANIC OR LATINO AND RACE' ~ label_04,
+                              label_02 == 'SEX AND AGE' & label_04 %nin% c('Female','Male')
+                                                & label_05 %in% c('Female','Male') ~ label_05)) %>%
     mutate(yValue = value) %>%
-    select(dropDownMain,dropDownSub,xValue,yValue)
+    mutate(percentEst = value/) %>%
+    select(dropDownMain,dropDownSub,xValue,yValue,percentEst)
     
 ```
 
 ```{r}
 view(acs_data_convert)
+```
+
+```{r}
+write_csv(acs_data_convert, "data/acs_data_converted.csv")
 ```
 
