--- a/visuals_create.Rmd
+++ b/visuals_create.Rmd
@@ -41,15 +41,13 @@ converted %>%
 edu_bar_plotly %>%
   filter(dropDownMain == "Education") %>%
   drop_na(xValue) %>%
-  #options(scipen = 999) %>%  #tried for sci-notation
   mutate(xValue = factor(xValue, levels = c('Less than 9th grade', '9th to 12th grade, no diploma', 'High school graduate (includes equivalency)', 'Some college, no degree', "Bachelor's degree", 'Graduate or professional degree'))) %>%
   ggplot(aes(x = xValue, y = yValue, na.rm = TRUE)) +
   geom_col() +
   ggtitle('TEST') +
   xlab('x test') +
   ylab('y test') +
-  #scale_x_numeric(labels = comma) +  #tried for sci-notation
-  #scale_x_discrete(labels = comma) +
+  scale_y_continuous(labels = comma) +
   theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1)) +
   theme(plot.title = element_text(hjust = 0.5))
 ```
